--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url('https://fonts.googleapis.com/css2?family=Anta&display=swap');
 *{
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-}
-body{
-    background-color: rgb(252, 235, 212);
+  font-family: "Anta", sans-serif;
+} 
+
+body {
+  background-color: rgb(252, 235, 212);
 }
